# vulkan-study

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
dependencies/: README.md
js/js-app-with-modules/: index.html
js/js-app-with-modules/modules/: square.js
js/threejs-studies/: jsconfig.json  package.json  server.py
js/threejs-studies/01-creating-a-scene/: index.html  main.js
js/threejs-studies/02-drawing-lines/: index.html  main.js
js/threejs-studies/03-drawing-points/: index.html  main.js
js/threejs-studies/04-raw-shader-material/: index.html  main.js
js/threejs-studies/05-shader-material/: index.html  main.js
js/threejs-studies/06-visualize-depth/: index.html  main.js
js/threejs-studies/07-gooch/: index.html  main.js
js/threejs-studies/manual/shadertoy/: shadertoy-as-texture.html  shadertoy-basic-x40.html  shadertoy-basic.html  shadertoy-bleepy-blocks.html  shadertoy-prep.html
src/studies/: AppSettings.hpp  CMakeLists.txt  FirstStudy.cpp  FirstStudy.hpp  SecondStudy.cpp  SecondStudy.hpp  Study.cpp  Study.hpp  StudyRunner.cpp  StudyRunner.hpp  VulkanContext.cpp  VulkanContext.hpp  Window.hpp  main.cpp  utils.cpp
src/vk-bootstrap-study/: CMakeLists.txt  SpirvHelper.cpp  SpirvHelper.hpp  main.cpp
src/vk-bootstrap-variation/: CMakeLists.txt  Image.cpp  Image.hpp  README.md  VulkanContext.cpp  VulkanContext.hpp  Window.cpp  Window.hpp  main.cpp  utils.hpp
src/vk-study-app/: CMakeLists.txt  README.md  main.cpp
src/vk-study-app/StudyApp/: AppSettings.hpp  Study.hpp  StudyRunner.cpp  StudyRunner.hpp
src/vk-study-app/studies/: 01-ClearStudy.cpp  01-ClearStudy.hpp  02-FirstStudy.cpp  02-FirstStudy.hpp  02b-SecondStudy.cpp  02b-SecondStudy.hpp  03-Vertices.cpp  03-Vertices.hpp  04-Uniforms.cpp  04-Uniforms.hpp  05-Instanced.cpp  05-Instanced.hpp  06-Transforms.cpp  06-Transforms.hpp  07-TransformsCompute.cpp  07-TransformsCompute.hpp  08-Outlines.cpp  08-Outlines.hpp  ClearStudy.cpp  ClearStudy.hpp  FirstStudy.cpp  SecondStudy.cpp  SecondStudy.hpp
src/vk-study-app/vku/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  ImGuiHelper.cpp  ImGuiHelper.hpp  Image.cpp  Image.hpp  Math.cpp  Math.hpp  Model.cpp  Model.hpp  SpirvHelper.cpp  UniformBuffer.cpp  UniformBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  Window.cpp  Window.hpp  utils.cpp  utils.hpp
src/vulkan-hpp-study/: CMakeLists.txt  main.cpp  utils.cpp  utils.hpp
